# agentready

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: agent_task.md
.github/PULL_REQUEST_TEMPLATE/: agent-pr.md
.github/workflows/: agent-control.yml  rust-ci.yml  web-ci.yml
docs/: CONTROL-FLOW.md  FILL-ME-FIRST.md  ROADMAP.md  SETUP.md
docs/agent-rules/: README.md  agent-handoff.md  architecture.template.md  business-rules.template.md  data-model.template.md  git-workflow.md  operations.template.md  project-profile.template.md  security.template.md  testing.template.md  verification.md
docs/client/: README.md  architecture.md  clean-code.md  data-contract.md  style.md  testing.md
docs/developer/: agent-journal.md  deployment.md  licensing.md  publishing-crates-io.md  running-the-project.md  source-metadata.md  testing-ui.md
docs/harness/: gemini-cli.md  multi-agent-workflow.md
docs/skills/: do_work.md  implement_feature.md  sync_with_main.md
docs/templates/decision-records/: 0002-repository-source-boundary.md
scripts/: agent-preflight.sh  ci-agent-branch-policy.sh  create-agent-worktree.sh  validate-agent-template.sh
server/: Cargo.toml
server/migrations/: 0001_init.sql
server/src/: lib.rs  main.rs  store.rs
server/tests/: api.rs  store.rs
src/: cli.rs  lib.rs  main.rs
src/analyzer/: mod.rs
src/detectors/: mod.rs
src/harness/: mod.rs
src/report/: mod.rs
src/source/: github.rs  local.rs  mod.rs
tests/: cli.rs
web/: AGENTS.md  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
web/app/: actions.ts  error.tsx  globals.css  layout.tsx  page.tsx
web/components/: BackendStatusDot.test.tsx  BackendStatusDot.tsx  BackendStatusProvider.tsx  FindingRow.test.tsx  FindingRow.tsx  HarnessScoreCard.tsx  RescanButton.tsx  ScanForm.test.tsx  ScanForm.tsx  ScoreGauge.tsx  ThemeMenu.test.tsx  ThemeMenu.tsx  display.ts
web/components/landing/: CopyCommandButton.tsx  FeaturesPreview.tsx  HarnessMatrix.tsx  HomeHero.tsx  InstallCallout.tsx  LandingIcon.tsx  MetricStrip.tsx  OutputPreview.tsx  ReportPreviews.tsx  SampleCheckResults.test.tsx  SampleCheckResults.tsx  ScanDock.tsx  SiteHeader.tsx  (+1 more)
web/lib/: api.ts  contract.test.ts  contract.ts  env.ts  fixtures.ts  landing.ts  scan-errors.test.ts  scan-errors.ts  score.test.ts  score.ts
(+5 files in other folders)
