[package]
name = "repolens"
version = "0.1.0"
edition = "2024"
description = "Offline repository analysis CLI that checks coding-agent harness readiness."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stephanemalho/repolens"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
ureq = "2.12"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
