[package]
name = "agentready-server"
version = "0.1.0"
edition = "2024"
description = "HTTP API exposing the AgentReady readiness engine for the SaaS."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stephanemalho/agentready"
publish = false

[dependencies]
agentready = { version = "0.1.0", path = ".." }
anyhow = "1.0.103"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "migrate"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.7.0", features = ["cors"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
